force-app/main/default/objects/Youth_Participants__c/Youth_Participants__c.object-meta.xml
<CustomObject>
    <label>Youth Participant</label>
    <nameField>
        <displayFormat>YP-{0000}</displayFormat>
        <label>Youth Participants Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Youth Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>