force-app/main/default/objects/Youth_Participants__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participants</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Youth Participants</relationshipLabel>
    <relationshipName>Youth_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>