force-app/main/default/objects/Youth_Participants__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Involved Person</fullName>
            </value>
            <value>
                <fullName>Informal Support</fullName>
            </value>
            <value>
                <fullName>LDSS Staff</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>CPS</fullName>
            </value>
            <value>
                <fullName>School System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>