force-app/main/default/objects/Youth_Participants__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <formula>IF(INCLUDES(Contact__r.Intake_Person_Role__c, &quot;Biological Child&quot;), &quot;Biological Child;&quot;, NULL) +
IF(INCLUDES(Contact__r.Intake_Person_Role__c, &quot;Other Child (Not in Household)&quot;), &quot;Other Child (Not in Household);&quot;, NULL) +
IF(INCLUDES(Contact__r.Intake_Person_Role__c, &quot;Private Adoptive Child&quot;), &quot;Private Adoptive Child;&quot;, NULL) +
IF(INCLUDES(Contact__r.Intake_Person_Role__c, &quot;Other Child&quot;), &quot;Other Child;&quot;, NULL) +
IF(INCLUDES(Contact__r.Intake_Person_Role__c, &quot;Non-Victim Child&quot;), &quot;Non-Victim Child;&quot;, NULL) +
IF(INCLUDES(Contact__r.Intake_Person_Role__c, &quot;Alleged Victim&quot;), &quot;Alleged Victim;&quot;, NULL) +
IF(INCLUDES(Contact__r.Intake_Person_Role__c, &quot;Alleged Maltreator&quot;), &quot;Alleged Maltreator;&quot;, NULL)+
IF(INCLUDES(Contact__r.Intake_Person_Role__c, &quot;Biological Parent&quot;), &quot;Biological Parent;&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship</label>
    <type>Text</type>
</CustomField>