force-app/main/default/objects/Youth_Participants__c/fields/RelationshipTxt__c.field-meta.xml
<CustomField>
    <fullName>RelationshipTxt__c</fullName>
    <label>Relationship</label>
    <type>TextArea</type>
</CustomField>