force-app/main/default/objects/Youth_Participants__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Case</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Youth Participants</relationshipLabel>
    <relationshipName>Youth_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>