force-app/main/default/objects/Youth_Participants__c/fields/Youth_Transition_Plan__c.field-meta.xml
<CustomField>
    <fullName>Youth_Transition_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Youth Transition Plan</label>
    <referenceTo>Youth_Transition_Plan__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Youth_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>